--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,6 +16,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Xcode
+        uses: ruby/setup-xcode@v1
+        with:
+          xcode-version: '26.0'
       - name: Build
         run: xcodebuild build-for-testing -scheme AppStoreVersionKit -destination 'platform=iOS Simulator,name=iPhone 16'
       - name: Test
